Commit local cliente